--- a/.gitignore
+++ b/.gitignore
@@ -43,7 +43,8 @@ build/
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -60,3 +61,4 @@ Temporary Items
 .apdisk
 
 .env
+.idea/
